# VChart

./: .gitignore  Doxyfile  README.md  pyproject.toml  requirements.txt
doc/: model.md
docs/: model.md  send.md
vchat/: __init__.py  config.py  errors.py  utils.py
vchat/core/: __init__.py  contact.py  core.py  hotreload.py  interface.py  login.py  messages.py  register.py  utils.py
vchat/model/: __init__.py  contact.py  content.py  message.py
vchat/net/: __init__.py  chatroom.py  download.py  friend.py  interface.py  login.py  net_helper.py  send.py  update.py
vchat/storage/: __init__.py  login_info.py
